--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">¿Quienes somos?</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">DOME</a></li>
                     </ul>
+                    <button class="btn info" onclick=" window.open('Installer/DomeInstaller.exe','_blank')" >Descargar DOME</button>
                 </div>
             </div>
         </nav>
