--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <div class="col-lg-8 mx-auto">
                         <h2 class="text-white mb-4">¿Quienes somos?</h2>
                         <p class="text-white-50">
-                            Sureffect es una desarrolladora de videojuegos para PC. Actualmente centrada en el desarrollo de 
+                            Sureffect es una desarrolladora de videojuegos para PC centrada en la creacion de juegos Indie. Actualmente centrada en el desarrollo de 
                             <a href="https://github.com/iquintasALT/DOME">DOME</a>
                         </p>
                     </div>
@@ -64,7 +64,7 @@
                     <div class="col-xl-4 col-lg-5">
                         <div class="featured-text text-center text-lg-left">
                             <h4>DOME</h4>
-                            <p class="text-black-50 mb-0">Juego centrado en mucho textosfri reirufikej fnkerjf nbgkrejhgf bvjkr eghbvfjhrtb gvjrhgv bjfhbv gjdhbgvfjm  dhbfnbm bgb msfbg</p>
+                            <p class="text-black-50 mb-0">Juego de exploración espacial en el que tú, tendras que conseguir escapar Aurora. Planeta en el que estas viviendo en una cupula pero que se encuentra destruida</p>
                         </div>
                     </div>
                 </div>
@@ -75,8 +75,8 @@
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-left">
-                                    <h4 class="text-white">Desarrollo</h4>
-                                    <p class="mb-0 text-white-50">empty</p>
+                                    <h4 class="text-white">Trailer</h4>
+                                    <p class="mb-0 text-white-50">Aqui tienes un trailer de nuestro juego que te ayudara a entender de que va el juego</p>
                                     <hr class="d-none d-lg-block mb-0 ml-0" />
                                 </div>
                             </div>
@@ -90,7 +90,7 @@
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-right">
-                                    <h4 class="text-white">Arte</h4>
+                                    <h4 class="text-white">Desarrollo</h4>
                                     <p class="mb-0 text-white-50">El equipo ha hecho el juego en pixel art, dirigidos por el vanguardista artista esloveno Cris... ns que poner</p>
                                     <hr class="d-none d-lg-block mb-0 mr-0" />
                                 </div>
