--- a/index.html
+++ b/index.html
@@ -56,21 +56,21 @@
             </div>
         </section>
         <!-- Projects-->
-        <section class="projects-section bg-light" id="projects">
+        <section class="projects-section bg-dark" id="projects">
             <div class="container">
                 <!-- Featured Project Row-->
                 <div class="row align-items-center no-gutters mb-4 mb-lg-5">
                     <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="docs/logo/game_logo_broken_dark.png" alt="..." /></div>
                     <div class="col-xl-4 col-lg-5">
-                        <div class="featured-text text-center text-lg-left">
+                        <div class="featured-text text-center text-lg-left text-white-50">
                             <h4>DOME</h4>
-                            <p class="text-black-50 mb-0">Juego de exploración espacial en el que tú, tendras que conseguir escapar Aurora. Planeta en el que estas viviendo en una cupula pero que se encuentra destruida</p>
+                            <p class="text-black-50 mb-0 text-white-50">Juego de exploración espacial en el que tú, tendras que conseguir escapar Aurora. Planeta en el que estas viviendo en una cupula pero que se encuentra destruida.</p>
                         </div>
                     </div>
                 </div>
                 <!-- Project One Row-->
                 <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
-                    <div class="col-lg-6"><img class="img-fluid" src="assets/img/clases_ninos.jpg" alt="..." /></div>
+                    <div class="col-lg-6"> <div class="embed-responsive embed-responsive-16by9">   <iframe class="embed-responsive-item" src="docs/milestones/hito_1/demovideo.mp4"></iframe> </div> </div> 
                     <div class="col-lg-6">
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
@@ -85,13 +85,17 @@
                 </div>
                 <!-- Project Two Row-->
                 <div class="row justify-content-center no-gutters">
-                    <div class="col-lg-6"><img class="img-fluid" src="assets/img/pers.gif" alt="..." /></div>
+                    <div class="col-lg-6"><img class="img-fluid" src="resources/sprites/weapons_sheet.png" width="1000" height="1000" alt="..." /></div>
                     <div class="col-lg-6 order-lg-first">
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-right">
                                     <h4 class="text-white">Desarrollo</h4>
-                                    <p class="mb-0 text-white-50">El equipo ha hecho el juego en pixel art, dirigidos por el vanguardista artista esloveno Cris... ns que poner</p>
+                                    <p class="mb-0 text-white-50">DOME es un survival shooter scroller 2D donde el jugador controlará a uno de los últimos supervivientes de una colonia establecida en el planeta helado Aurora. 
+                                        Cada día, deberá aprovechar las horas de luz para buscar los objetos que necesita para sobrevivir en este hostil y frío lugar. Además, durante las horas de noche el
+                                         frío es mortal por lo que deberá volver al refugio a descansar y gestionar sus recursos. 
+                                        
+                                        Algunas de las mecánicas principales están basadas en juegos como This War Of Mine, Escape from Tarkov y Metro Exudos.</p>
                                     <hr class="d-none d-lg-block mb-0 mr-0" />
                                 </div>
                             </div>
