--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">¿Quienes somos?</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">DOME</a></li>
-                    </ul>
-                    <button class="btn info" onclick=" window.open('Installer/DomeInstaller.exe','_blank')" >Descargar DOME</button>
+                    <!-- <button class="btn info" onclick=" window.open('Installer/DomeInstaller.exe','_blank')" >Descargar DOME</button> BOTON DE DESCARGA DESCOMENTAR CUANDO ESTE LA VERSION FINAL-->
                 </div>
             </div>
         </nav>
@@ -64,7 +63,7 @@
                     <div class="col-xl-4 col-lg-5">
                         <div class="featured-text text-center text-lg-left text-white-50">
                             <h4>DOME</h4>
-                            <p class="text-black-50 mb-0 text-white-50">Juego de exploración espacial en el que tú, tendras que conseguir escapar Aurora. Planeta en el que estas viviendo en una cupula pero que se encuentra destruida.</p>
+                            <p class="text-black-50 mb-0 text-white-50">Juego de exploración espacial en el que tú, tendras que conseguir escapar Aurora. Planeta en el que estas viviendo en una cupula, pero que se encuentra destruida.</p>
                         </div>
                     </div>
                 </div>
@@ -85,7 +84,8 @@
                 </div>
                 <!-- Project Two Row-->
                 <div class="row justify-content-center no-gutters">
-                    <div class="col-lg-6"><img class="img-fluid" src="resources/sprites/weapons_sheet.png" width="1000" height="1000" alt="..." /></div>
+                    <div class="col-lg-6"><img class="img-fluid" src="assets/img/enemy.gif" width="300" height="300" alt="..." />
+                                          <img class="img-fluid" src="assets/img/weapons.gif" width="300" height="300" right="300" alt="..." /></div>
                     <div class="col-lg-6 order-lg-first">
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
