more changes web

--- a/index.html
+++ b/index.html
@@ -84,8 +84,10 @@
                 </div>
                 <!-- Project Two Row-->
                 <div class="row justify-content-center no-gutters">
-                    <div class="col-lg-6"><img class="img-fluid" src="assets/img/enemy.gif" width="300" height="300" alt="..." />
-                                          <img class="img-fluid" src="assets/img/weapons.gif" width="300" height="300" right="300" alt="..." /></div>
+                    <div class="col-lg-3"><img class="img-fluid" src="assets/img/enemy.gif" width="260" height="260" alt="..." />
+                                          <img class="img-fluid" src="assets/img/prota.gif" width="260" height="260" left="300" alt="..." /></div>
+                   <div class="col-lg-3"><img class="img-fluid" src="assets/img/weapons.gif" width="260" height="260" alt="..." />
+                                            <img class="img-fluid" src="assets/img/enemybasico.gif" width="250" height="250" left="300" alt="..." /></div>          
                     <div class="col-lg-6 order-lg-first">
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
