--- a/index.html
+++ b/index.html
@@ -97,12 +97,13 @@
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-right">
-                                    <h4 class="text-white">Desarrollo</h4>
-                                    <p class="mb-0 text-white-50">DOME es un survival shooter scroller 2D donde el jugador controlará a uno de los últimos supervivientes de una colonia establecida en el planeta helado Aurora. 
-                                        Cada día, deberá aprovechar las horas de luz para buscar los objetos que necesita para sobrevivir en este hostil y frío lugar. Además, durante las horas de noche el
-                                         frío es mortal por lo que deberá volver al refugio a descansar y gestionar sus recursos. 
-                                        
-                                        Algunas de las mecánicas principales están basadas en juegos como This War Of Mine, Escape from Tarkov y Metro Exudos.</p>
+                                    <h4 class="text-white">CONTEXTO</h4>
+                                    <p class="mb-0 text-white-50">Eres uno de los últimos supervivientes de una colonia establecida en el planeta helado Aurora, el ataque alienígena reciente
+                                        ha provocado el deterioro de la cúpula de la colonia y con el objetivo de escapar de este infierno helado decides explorar la cúpula para reparar una nave y volver a casa.
+                                    </p>
+                                    <p class="mb-0 text-white-50" style="margin-top: 10px;">
+                                        Cada día, deberás aprovechar las horas de luz para buscar los objetos que necesitas para sobrevivir en este hostil y frío lugar. Además, durante las horas de noche el
+                                        frío es mortal por lo que deberás volver al refugio a descansar y gestionar tus recursos.</p>
                                     <hr class="d-none d-lg-block mb-0 mr-0" />
                                 </div>
                             </div>
