--- a/index.html
+++ b/index.html
@@ -19,16 +19,17 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
             <div class="container">
-                <a class="navbar-brand js-scroll-trigger" href="#page-top" style="font-family: Orbitron;">Sureffect</a>
+                <a class="navbar-brand js-scroll-trigger" href="#page-top">Sureffect</a>
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars"></i>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
-                    <ul class="navbar-nav ml-auto" style="font-family: Orbitron;">
+                    <ul class="navbar-nav ml-auto">
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">¿Quienes somos?</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">DOME</a></li>
-                    <!-- <button class="btn info" onclick=" window.open('Installer/DomeInstaller.exe','_blank')" >Descargar DOME</button> BOTON DE DESCARGA DESCOMENTAR CUANDO ESTE LA VERSION FINAL-->
+                    </ul>
+                    <button class="btn info" onclick=" window.open('resources/sprites/donut.png','_blank')" >Descargar DOME</button>
                 </div>
             </div>
         </nav>
@@ -41,10 +42,10 @@
             </div>
         </header>
         <!-- About-->
-        <section class="about-section text-center" id="about" style="font-family: Orbitron;">
+        <section class="about-section text-center" id="about">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-8 mx-auto" >
+                    <div class="col-lg-8 mx-auto">
                         <h2 class="text-white mb-4">¿Quienes somos?</h2>
                         <p class="text-white-50">
                             Sureffect es una desarrolladora de videojuegos para PC centrada en la creacion de juegos Indie. Actualmente centrada en el desarrollo de 
@@ -55,20 +56,15 @@
             </div>
         </section>
         <!-- Projects-->
-        <section class="projects-section bg-dark" id="projects" style="font-family: Orbitron;">
+        <section class="projects-section bg-dark" id="projects">
             <div class="container">
                 <!-- Featured Project Row-->
                 <div class="row align-items-center no-gutters mb-4 mb-lg-5">
                     <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="docs/logo/game_logo_broken_dark.png" alt="..." /></div>
                     <div class="col-xl-4 col-lg-5">
                         <div class="featured-text text-center text-lg-left text-white-50">
-                            <h4 style="color: white;">DOME</h4>
-                            <p class="text-black-50 mb-0 text-white-50">Sobrevive en la cúpula abandonada del planeta Aurora, enfréntate a una raza alienígena desconocida y reúne los recursos suficientes para escapar.
-                               <br> DOME es un juego survival 2D basado en el manejo de recursos y el combate con armas de fuego. 
-                            </p>
-                            <p>
-                                <h5 style="color: white;">¿Serás capaz de huir del planeta?</h5>
-                            </p>
+                            <h4>DOME</h4>
+                            <p class="text-black-50 mb-0 text-white-50">Juego de exploración espacial en el que tú, tendras que conseguir escapar Aurora. Planeta en el que estas viviendo en una cupula, pero que se encuentra destruida.</p>
                         </div>
                     </div>
                 </div>
@@ -79,7 +75,7 @@
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-left">
-                                    <h4 class="text-white" style="font-family: Orbitron;">DEMO DE JUEGO</h4>
+                                    <h4 class="text-white">Trailer</h4>
                                     <p class="mb-0 text-white-50">Aqui tienes un trailer de nuestro juego que te ayudara a entender de que va el juego</p>
                                     <hr class="d-none d-lg-block mb-0 ml-0" />
                                 </div>
@@ -92,18 +88,17 @@
                     <div class="col-lg-3"><img class="img-fluid" src="assets/img/enemy.gif" width="260" height="260" alt="..." />
                                           <img class="img-fluid" src="assets/img/prota.gif" width="260" height="260" left="300" alt="..." /></div>
                    <div class="col-lg-3"><img class="img-fluid" src="assets/img/weapons.gif" width="260" height="260" alt="..." />
-                                            <img class="img-fluid" src="assets/img/enemybasico.gif" width="250" height="250" left="300" alt="..." /></div>          
+                                            <img class="img-fluid" src="assets/img/enemybasico.gif" width="245" height="245" left="300" alt="..." /></div>          
                     <div class="col-lg-6 order-lg-first">
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-right">
-                                    <h4 class="text-white">CONTEXTO</h4>
-                                    <p class="mb-0 text-white-50">Eres uno de los últimos supervivientes de una colonia establecida en el planeta helado Aurora, el ataque alienígena reciente
-                                        ha provocado el deterioro de la cúpula de la colonia y con el objetivo de escapar de este infierno helado decides explorar la cúpula para reparar una nave y volver a casa.
-                                    </p>
-                                    <p class="mb-0 text-white-50" style="margin-top: 10px;">
-                                        Cada día, deberás aprovechar las horas de luz para buscar los objetos que necesitas para sobrevivir en este hostil y frío lugar. Además, durante las horas de noche el
-                                        frío es mortal por lo que deberás volver al refugio a descansar y gestionar tus recursos.</p>
+                                    <h4 class="text-white">Desarrollo</h4>
+                                    <p class="mb-0 text-white-50">DOME es un survival shooter scroller 2D donde el jugador controlará a uno de los últimos supervivientes de una colonia establecida en el planeta helado Aurora. 
+                                        Cada día, deberá aprovechar las horas de luz para buscar los objetos que necesita para sobrevivir en este hostil y frío lugar. Además, durante las horas de noche el
+                                         frío es mortal por lo que deberá volver al refugio a descansar y gestionar sus recursos. 
+                                        
+                                        Algunas de las mecánicas principales están basadas en juegos como This War Of Mine, Escape from Tarkov y Metro Exudos.</p>
                                     <hr class="d-none d-lg-block mb-0 mr-0" />
                                 </div>
                             </div>
