--- a/index.html
+++ b/index.html
@@ -107,6 +107,12 @@
                 </div>
             </div>
         </section>
+        <section class="contact-section bg-black" id="signup">
+            <div class="social d-flex justify-content-center">
+                <a class="mx-2" href="https://www.pivotaltracker.com/n/projects/2489079"><img src="docs/images/pivotal.png" width="25" height="25" style="margin-top:11px;"></a>
+                <a class="mx-2" href="https://github.com/iquintasALT/DOME"><i class="fab fa-github"></i></a>
+            </div>
+        </section>
         <!-- Footer-->
         <footer class="footer bg-black small text-center text-white-50"><div class="container">Copyright &copy; 2021</div></footer>
         <!-- Bootstrap core JS-->
