--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">¿Quienes somos?</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">DOME</a></li>
                     </ul>
-                    <!-- <button class="btn info" onclick=" window.open('Installer/DomeInstaller.exe','_blank')" >Descargar DOME</button> BOTON DE DESCARGA DESCOMENTAR CUANDO ESTE LA VERSION FINAL-->
-                    <button class="btn info" onclick=" window.open('resources/sprites/donut.png','_blank')">Descargar DOME</button>
+                    <button class="btn info" onclick=" window.location='https://github.com/iquintasALT/DOME/releases/download/v1.0/DomeInstaller.exe'">Descargar DOME</button>
                 </div>
             </div>
         </nav>
